# guillotine

./: .gitignore  .gitmodules  AudioPlugin.jucer  CLAUDE.md  CMakeLists.txt  Guillotine.jucer  README.md  TEMPLATE.md  TODO.md  requirements.txt
.github/workflows/: build.yml
scripts/: DownloadWebView2.ps1  _common.sh  build-windows.ps1  build-windows.sh  build.sh  init.sh  standalone.sh  watch.sh
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Clipper.cpp  Clipper.h  ClipperEngine.cpp  ClipperEngine.h  DCBlocker.cpp  DCBlocker.h  Oversampler.cpp  Oversampler.h  SaturatorCurves.h  StereoProcessor.cpp  StereoProcessor.h
src/gui/: GuillotineComponent.cpp  GuillotineComponent.h  WaveformComponent.cpp  WaveformComponent.h
tests/: compare_oversampling.py  conftest.py  generate_references.py  utils.py
tests/clipper/: test_consts.py  test_delta.py  test_hard_clip.py  test_intersample.py  test_oversampling.py  test_sharpness.py
tests/compliance/: test_compliance.py
tests/integration/: test_integration.py  test_invariance.py  test_nan_defense.py
tests/unit/: CMakeLists.txt  Main.cpp  UnitTests.cpp  build.sh  test_clipper.cpp  test_clipper_engine.cpp  test_delta_monitor.cpp  test_oversampler.cpp  test_stereo_processor.cpp  test_transient.cpp  test_unit.py  test_utils.cpp  test_utils.h
web/: index.html  main.css  main.js
web/components/: guillotine.js  knob.js  visualizer.js
web/components/controls/: knob.css  knob.js  lever.css  lever.js
web/components/display/: blood-pool.css  blood-pool.js  digits.css  digits.js  waveform.js
web/components/guillotine/: guillotine.css  guillotine.js
web/components/knob/: knob.css  knob.js
web/components/microscope/: microscope.js
web/components/sprite-number/: sprite-number.css  sprite-number.js
web/components/views/: guillotine.css  guillotine.js  microscope.css  microscope.js
web/components/visualizer/: visualizer.css  visualizer.js
web/lib/: delta-mode.css  juce-bridge.js  saturation-curves.js  svg-utils.js  theme.js  utils.js
web/styles/: main.css
